MINOR: Fixed the z-index issue

--- a/src/scss/bootstrap/_fixes.scss
+++ b/src/scss/bootstrap/_fixes.scss
@@ -77,3 +77,8 @@ button {
 #MemberLoginForm_LoginForm_action_doLogin {
   @extend .btn;
 }
+
+.carousel-control-prev,
+.carousel-control-next {
+  z-index: 16;
+}
